bdr.BDR.scala.error
Erreur de compilation :
BDR:3: error: identifier expected but string literal found.
  if (litMessage():"R")
                   ^BDR:6: error: ')' expected but '}' found.
  }
  ^BDR:7: error: identifier expected but string literal found.
  if (litMessage():"L"){
                   ^BDR:34: error: ')' expected but '}' found.
	}
        ^